Bug 202036 - Remove the highlight behind the selected search term in the filter editor. r=Neil, r=mconley, ui-r=bwinton

--- a/mail/base/content/messenger.css
+++ b/mail/base/content/messenger.css
@@ -138,6 +138,10 @@ mail-tagfield[collapsed="true"] {
   display: none;
 }
 
+#searchTermList > listitem {
+  -moz-binding: url("chrome://messenger/content/searchWidgets.xml#listitem");
+}
+
 searchattribute {
   -moz-binding: url("chrome://messenger/content/mailWidgets.xml#searchattribute");
 }
